kubernetes/k8s/server-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  server-service
spec:
  selector:
    app:  server
  type:  ClusterIP 
  ports:
  - name:  http
    port:  80
    targetPort:  3000
