kubernetes/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kodex-kuber-demo
  labels:
    app.kubernetes.io/name: kodex-kuber-demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server-service
            port: 
              number: 80
